add waiting room timeout to autoleave config
