# bots/bot_controller/automatic_leave_configuration.py
@@ -10,9 +10,11 @@ class AutomaticLeaveConfiguration:
         only_participant_in_meeting_timeout_seconds: Number of seconds to wait before leaving if bot is the only participant
         wait_for_host_to_start_meeting_timeout_seconds: Number of seconds to wait for the host to start the meeting
         silence_activate_after_seconds: Number of seconds to wait before activating the silence timeout
+        waiting_room_timeout_seconds: Number of seconds to wait before leaving if the bot is in the waiting room
     """
 
     silence_timeout_seconds: int = 600
+    silence_activate_after_seconds: int = 1200
     only_participant_in_meeting_timeout_seconds: int = 60
     wait_for_host_to_start_meeting_timeout_seconds: int = 600
-    silence_activate_after_seconds: int = 1200
+    waiting_room_timeout_seconds: int = 600
